--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,22 @@
 !.yarn/releases
 !.yarn/sdks
 !.yarn/versions
+node_modules
+.DS_Store
+**/*.php
+**/.env
+.pnp.*
+cache
+.idea
+build
+workspace.code-workspace
+generated
+secrets
+dist
+.vscode/
+*.sh
+!entrypoint.sh
+ecosystem.config.js
+pnpm-lock.yaml
+./false
+test/
